--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class= 'banner-container'>
       <div class= 'banner-items'>
         <h1>Welcome to the Hot Beans Company Website</h1>
-        <button id= 'dark-mode' onclick = 'darkLightMode()'>Canya Mode</button>
+        <button id= 'dark-mode' onclick = 'darkLightMode()'>Cyan Mode</button>
         <button id= 'light-mode'  onclick = 'darkLightMode()'>Light Mode</button>
       </div>
   </div>
