--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class= 'staff-card'>
           <div class= 'imgbox'>
-            <img src= 'employee-two.png' height= '150px' width= '400px'>
+            <img src= 'employee-two.PNG' height= '150px' width= '400px'>
             </div>
               <div class= 'staff-content'>
                 <h2>Salar Sikandar</h2>
@@ -146,7 +146,7 @@ the company to become better. As Imama proved herself, she became one of the spe
         </div>
         <div class= 'staff-card'>
           <div class= 'imgbox'>
-            <img src= 'employee-four.png' height= '150px' width= '400px'>
+            <img src= 'employee-four.PNG' height= '150px' width= '400px'>
             </div>
               <div class= 'staff-content'>
                 <h2>Emilia Luke</h2>
